# Adore

./: README.md  meson.build
data/: adore.gresource.xml  io.github.adore_browser.adore.desktop  meson.build
data/ui/: notebook.ui  page-label.ui  window.ui
src/: adore-application-window.vala  adore-application.vala  adore-bookmarks.vala  adore-content-filtering.vala  adore-cookies-cache-dialog.vala  adore-downloads-dialog.vala  adore-google-completion.vala  adore-notebook.vala  adore-page-label.vala  adore-page.vala  adore-settings-dialog.vala  adore-settings.vala  adore-util.vala  adore-web-page.vala  adore.vala  adore.vala.in  meson.build
